--- a/home.html
+++ b/home.html
@@ -13,109 +13,107 @@
         <link href="style/home.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="background">
-            <div id="page">
-                <header>
-                    <nav>
-                        <a href="home.html"><img id="logo" src="img/logo.png"/></a>
-                        <a href="home.html">
-                            <i id="homebutton" class="fas fa-home"></i>
-                        </a>
-                        <a href="cv.html">
-                            <i id="cvbutton" class="fas fa-clipboard"></i>
-                        </a>
-                        <div class="stickright">
-                            <i id="profileicon" class="fas fa-user-circle"></i>
-                        </div>
-                        <a class="showlogin hangright">
-                            <i id="loginmenubutton" class="fas fa-sign-in-alt"></i>
-                        </a>
-                        <a class="logoutuser hangright">
-                            <i id="logoutmenubutton" class="fas fa-sign-out-alt"></i>
-                        </a>
-                    </nav>
-                    <div id="arrow"/>
-                </header>
-                <div class="bigbreak"></div>
-                <img id="disc" title="Play DVD" src="img/dvd.png"/>
-                <div id="videocontainer">
-                    <video width="400" id="bunny">
-                        <source src="video/Big_Buck_Bunny_extract.mp4" type="video/mp4">
-                        <source src="vidoe/Big_Buck_Bunny_extract.ogv" type="video/ogg">
-                        Your browser does not support HTML5 video.
-                    </video>
-                    <input id="videoslider" value="0" min="0" max="300" type="range"/>
-                    <div id="volume">
-                        <i id="volumeon" class="fas fa-volume-up"></i>
-                        <i id="volumeoff" class="fas fa-volume-mute"></i>
+        <div id="page">
+            <header>
+                <nav>
+                    <a href="home.html"><img id="logo" src="img/logo.png"/></a>
+                    <a href="home.html">
+                        <i id="homebutton" class="fas fa-home"></i>
+                    </a>
+                    <a href="cv.html">
+                        <i id="cvbutton" class="fas fa-clipboard"></i>
+                    </a>
+                    <div class="stickright">
+                        <i id="profileicon" class="fas fa-user-circle"></i>
                     </div>
-                    <div id="videocover">
-                        <p>
-                            Video courtesy of
-                            <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
-                        </p>
-                    </div>
-                    <div id="controls">
-                        <button title="Restart" id="restart">
-                            <i class="fas fa-undo"></i>
-                        </button>
-                        <button title="Backward" id="rewind">
-                            <i class="fas fa-backward"></i>
-                        </button>
-                        <button id="play">
-                            <i title="Play" id="playicon" class="fas fa-play"></i>
-                            <i title="Pause" id="pauseicon" class="fas fa-pause"></i>
-                        </button>
-                        <button title="Forward" id="skip">
-                            <i class="fas fa-forward"></i>
-                        </button>
-                        <button title="Eject" id="end">
-                            <i class="fas fa-eject"></i>
-                        </button>
-                    </div>
+                    <a class="showlogin hangright">
+                        <i id="loginmenubutton" class="fas fa-sign-in-alt"></i>
+                    </a>
+                    <a class="logoutuser hangright">
+                        <i id="logoutmenubutton" class="fas fa-sign-out-alt"></i>
+                    </a>
+                </nav>
+                <div id="arrow"/>
+            </header>
+            <div class="bigbreak"></div>
+            <img id="disc" title="Play DVD" src="img/dvd.png"/>
+            <div id="videocontainer">
+                <video width="400" id="bunny">
+                    <source src="video/Big_Buck_Bunny_extract.mp4" type="video/mp4">
+                    <source src="vidoe/Big_Buck_Bunny_extract.ogv" type="video/ogg">
+                    Your browser does not support HTML5 video.
+                </video>
+                <input id="videoslider" value="0" min="0" max="300" type="range"/>
+                <div id="volume">
+                    <i id="volumeon" class="fas fa-volume-up"></i>
+                    <i id="volumeoff" class="fas fa-volume-mute"></i>
                 </div>
-                <div id="stand"></div>
-                <div id="cabinet">
-                    <div class="cabinet door">
-                        <div class="cabinet door handle"></div>
-                    </div>
-                    <div class="cabinet door">
-                        <div class="cabinet door handle"></div>
-                    </div>
+                <div id="videocover">
+                    <p>
+                        Video courtesy of
+                        <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
+                    </p>
                 </div>
-                <footer>
-                    <h1>Seb Heron Coursework for CSC-20021 - Web Technologies</h1>
-                </footer>
-                <div class="dimmer"></div>
-                <div class="popup" id="login">
-                    <form class="form">
-                        <h1><i class="fas fa-user-circle"></i></h1>
-                        <label id="loginerror" class="formerror"l>Username or password incorrect</label>
-                        <input id="loginusername" type="text" placeholder="Username" autocomplete="username">
-                        <input id="loginpassword" type="password" placeholder="Password" autocomplete="current-password">
-                        <button id="loginbutton" class="submitbutton" type="button">Login</button>
-                        <button class="closebutton" type="button">X</button>
-                        <a id="showregister">Register an account.</a>
-                    </form>
+                <div id="controls">
+                    <button title="Restart" id="restart">
+                        <i class="fas fa-undo"></i>
+                    </button>
+                    <button title="Backward" id="rewind">
+                        <i class="fas fa-backward"></i>
+                    </button>
+                    <button id="play">
+                        <i title="Play" id="playicon" class="fas fa-play"></i>
+                        <i title="Pause" id="pauseicon" class="fas fa-pause"></i>
+                    </button>
+                    <button title="Forward" id="skip">
+                        <i class="fas fa-forward"></i>
+                    </button>
+                    <button title="Eject" id="end">
+                        <i class="fas fa-eject"></i>
+                    </button>
                 </div>
-                <div class="popup" id="register">
-                    <form class="form">
-                        <h1><i class="fas fa-id-badge"></i></h1>
-                        <label id="registererror" class="formerror">Cannot create account</label>
-                        <input id="registerusername" type="text" placeholder="Username" autocomplete="username">
-                        <input id="registerpassword" type="password" placeholder="Password" autocomplete="current-password">
-                        <br/>
-                        <label for="terms">Agree to terms and conditions?</label>
-                        <input id="agreebox" type="checkbox" name="terms">
-                        <button id="registerbutton" class="submitbutton" type="button">Register</button>
-                        <button class="closebutton" type="button">X</button>
-                        <a class="showlogin">Login to an account.</a>
-                    </form>
-                </div>
-                <script src="script/main.js" defer></script>
-                <script src="script/login.js" defer></script>
-                <script src="script/home.js" defer></script>
             </div>
+            <div id="stand"></div>
+            <div id="cabinet">
+                <div class="cabinet door">
+                    <div class="cabinet door handle"></div>
+                </div>
+                <div class="cabinet door">
+                    <div class="cabinet door handle"></div>
+                </div>
+            </div>
+            <footer>
+                <h1>Seb Heron Coursework for CSC-20021 - Web Technologies</h1>
+            </footer>
+            <div class="dimmer"></div>
+            <div class="popup" id="login">
+                <form class="form">
+                    <h1><i class="fas fa-user-circle"></i></h1>
+                    <label id="loginerror" class="formerror"l>Username or password incorrect</label>
+                    <input id="loginusername" type="text" placeholder="Username" autofocus>
+                    <input id="loginpassword" type="password" placeholder="Password">
+                    <button id="loginbutton" class="submitbutton" type="button">Login</button>
+                    <button class="closebutton" type="button">X</button>
+                    <a id="showregister">Register an account.</a>
+                </form>
+            </div>
+            <div class="popup" id="register">
+                <form id="registerform" class="form">
+                    <h1><i class="fas fa-id-badge"></i></h1>
+                    <label id="registererror" class="formerror"></label>
+                    <input id="registerusername" type="text" placeholder="Username" autocomplete="username" required>
+                    <input id="registerpassword" type="password" placeholder="Password" autocomplete="current-password" required>
+                    <br/>
+                    <label for="terms">Agree to terms and conditions?</label>
+                    <input id="agreebox" type="checkbox" name="terms" required>
+                    <button id="registerbutton" class="submitbutton" type="button">Register</button>
+                    <button class="closebutton" type="button">X</button>
+                    <a class="showlogin">Login to an account.</a>
+                </form>
+            </div>
+            <script src="script/main.js" defer></script>
+            <script src="script/login.js" defer></script>
+            <script src="script/home.js" defer></script>
         </div>
     </body>
 </html>
