--- a/cv.html
+++ b/cv.html
@@ -165,7 +165,7 @@
         </footer>
         <div class="dimmer"></div>
         <div class="popup" id="login">
-            <form class="form">
+            <form id="loginform" class="form">
                 <h1><i class="fas fa-user-circle"></i></h1>
                 <label id="loginerror" class="formerror"l>Username or password incorrect</label>
                 <input id="loginusername" type="text" placeholder="Username" autofocus>
