--- a/cv.html
+++ b/cv.html
@@ -7,6 +7,7 @@
         <meta name="author" content="Seb Heron" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Sebastian Heron - CV - CSC-20021</title>
+        <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
         <link href="https://fonts.googleapis.com/css2?family=Acme&family=Indie+Flower&display=swap" rel="stylesheet" />
         <link href="style/main.css" rel="stylesheet" />
@@ -17,22 +18,12 @@
         <div id="page">
             <header>
                 <nav>
-                    <a href="home.html"><img id="logo" src="img/logo.png"/></a>
-                    <a href="home.html">
-                        <i id="homebutton" class="fas fa-home"></i>
-                    </a>
-                    <a href="cv.html">
-                        <i id="cvbutton" class="fas fa-clipboard"></i>
-                    </a>
-                    <div class="stickright">
-                        <i id="profileicon" class="fas fa-user-circle"></i>
-                    </div>
-                    <a class="showlogin hangright">
-                        <i id="loginmenubutton" class="fas fa-sign-in-alt"></i>
-                    </a>
-                    <a class="logoutuser hangright">
-                        <i id="logoutmenubutton" class="fas fa-sign-out-alt"></i>
-                    </a>
+                    <a href="home.html" title="Logo"><img id="logo" src="img/logo.png"/></a>
+                    <a href="home.html" title="Home"><i id="homebutton" class="fas fa-home"></i></a>
+                    <a href="cv.html" title="CV"><i id="cvbutton" class="fas fa-clipboard"></i></a>
+                    <div class="stickright"><i id="profileicon" class="fas fa-user-circle"></i></div>
+                    <a title="Login" class="showlogin hangright"><i id="loginmenubutton" class="fas fa-sign-in-alt"></i></a>
+                    <a title="Logout" class="logoutuser hangright"><i id="logoutmenubutton" class="fas fa-sign-out-alt"></i></a>
                 </nav>
                 <div id="arrow"/>
             </header>
