Using a hyphen case style for css as recommended

--- a/cv.html
+++ b/cv.html
@@ -21,29 +21,29 @@
                     <a href="home.html" title="Logo"><img id="logo" src="img/logo.png"/></a>
                     <a href="home.html" title="Home"><i id="homebutton" class="fas fa-home"></i></a>
                     <a href="cv.html" title="CV"><i id="cvbutton" class="fas fa-clipboard"></i></a>
-                    <div class="stickright"><i id="profileicon" class="fas fa-user-circle"></i></div>
-                    <a title="Login" class="showlogin hangright"><i id="loginmenubutton" class="fas fa-sign-in-alt"></i></a>
-                    <a title="Logout" class="logoutuser hangright"><i id="logoutmenubutton" class="fas fa-sign-out-alt"></i></a>
+                    <div class="stick-right"><i id="profileicon" class="fas fa-user-circle"></i></div>
+                    <a title="Login" class="showlogin hang-right"><i id="loginmenubutton" class="fas fa-sign-in-alt"></i></a>
+                    <a title="Logout" class="logoutuser hang-right"><i id="logoutmenubutton" class="fas fa-sign-out-alt"></i></a>
                 </nav>
                 <div id="arrow"/>
             </header>
-            <div class="bigbreak"></div>
+            <div class="big-break"></div>
             <div id="container">
-                <abbr id="name" title="Curriculum Vitae"><span id="letterC">C</span><span id="letterV">V</span></abbr>
+                <abbr id="name" title="Curriculum Vitae"><span id="letter-C">C</span><span id="letter-V">V</span></abbr>
                 <a href="https://github.com"><img class="account" src="img/github.png"/></a>
                 <a href="https://linkedin.com"><img class="account" src="img/linkedin.png"/></a>
                 <a href="https://reddit.com"><img class="account" src="img/reddit.png"/></a>
                 <div id="notepad">
-                    <img id="smallprofile" src="img/profile.png"/>
+                    <img id="small-profile" src="img/profile.png"/>
                     <p id="summary">
-                        <span id="summaryhead">Summary</span>
+                        <span id="summary-head">Summary</span>
                         <br/>
                         Hi I'm Seb, I'm a 2nd year Computer Science student at Keele University with a keen interest in programming and software development. This is my CV. Hope you enjoy exploring the page!
                     </p>
                     <img id="profile" src="img/profile.png"/>
                 </div>
-                <div id="cardscontainer">
-                    <div class="cardstack languages">
+                <div id="cards-container">
+                    <div class="card-stack languages">
                         <div class="card languages">
                             <h1>Languages</h1>
                             <img src="img/vs.png" />
@@ -76,7 +76,7 @@
                             <h2>★</h2>
                         </div>
                     </div>
-                    <div class="cardstack achievements">
+                    <div class="card-stack achievements">
                         <div class="card achievements">
                             <h1>Achievements</h1>
                             <img src="img/creditsuisse.png" />
@@ -100,9 +100,9 @@
                         </div>
                     </div>
                 </div>
-                <div id="yearcontainer">
+                <div id="year-container">
                     <div class="year">
-                        <h1 class="yearheading badge">1st Year Modules</h1>
+                        <h1 class="year-heading badge">1st Year Modules</h1>
                         <ul>
                             <li><a href="https://www.keele.ac.uk/catalogue/current/csc-10024.htm">Programming I - Programming Fundamentals</a></li>
                             <li><a href="https://www.keele.ac.uk/catalogue/current/csc-10029.htm">Fundamentals of Computing</a></li>
@@ -115,7 +115,7 @@
                         </ul>
                     </div>
                     <div class="year">
-                        <h1 class="yearheading badge">2nd Year Modules</h1>
+                        <h1 class="year-heading badge">2nd Year Modules</h1>
                         <ul>
                             <li><a href="https://www.keele.ac.uk/catalogue/current/csc-20021.htm">Web Technologies</a></li>
                             <li><a href="https://www.keele.ac.uk/catalogue/current/csc-20037.htm">Programming II - Data Structures and Algorithms</a></li>
@@ -128,7 +128,7 @@
                         </ul>
                     </div>
                     <div class="year">
-                        <h1 class="yearheading badge">3rd Year Modules</h1>
+                        <h1 class="year-heading badge">3rd Year Modules</h1>
                         <ul>
                             <li><a href="https://www.keele.ac.uk/catalogue/current/csc-30014.htm">Third Year Double Project - ISP</a></li>
                             <li><a href="https://www.keele.ac.uk/catalogue/current/csc-30016.htm">Software Engineering Project Management</a></li>
@@ -140,14 +140,14 @@
                         </ul>
                     </div>
                 </div>
-                <div id="projectcontainer">
+                <div id="project-container">
                     <img id="first" class="project" src="img/meat.png" onclick="showProjectDescription(this)"/>
                     <img id="second" class="project" src="img/camera.png" onclick="showProjectDescription(this)"/>
                     <img id="third" class="project" src="img/baby.png" onclick="showProjectDescription(this)"/>
-                    <p id="defaultdescription" class="description"><span>Projects</span><br/>For my third year project I have several ideas, all of which I'll be considering over the next year. I want to pick a project that best showcases my skills I've learnt.</p>
-                    <p id="firstdescription" class="description rotated"><span>Generating Meat For 3D Printing</span><br/>A new invention which has recently come to light is 3D printed meat, here's a <a href="https://www.youtube.com/watch?v=MFgWgDHMQEQ">video</a> of it in action. They use a handful of Steak models with all of the fats and meat meticulously placed to recreate the real thing. The problem is this doesn't allow for the steaks to appear unique as they all look very similar, my project would be to write some software which could generate realistic looking meat while still maintaining a high standard.</p>
-                    <p id="seconddescription" class="description rotated"><span>Photo app for travelers</span><br/>When traveling around the globe, many travelers take photos of the places they visit and the sights they see. My second project idea is to create an app which will use machine learning and other methods to rate the best photos of each monument based on current trends surrounding the monument taken from other social networks such as instagram and facebook. Each use would get an overall score for their photos and the incentive would be to reach the top of the global and national leaderboards.</p>
-                    <p id="thirddescription" class="description rotated"><span>Investigating family dynamics using Machine Learning</span><br/>Using machine learning we can simulate all sorts of different behaviors much like they'd be formed in the real world. I want to be able to simulate family dynamics in the traditional sense, as would be seen with animals in the wild. I'd hopefully simulate feeding, protection and teaching in a simplistic manner. The MLAgents in Unity would be a good platform to use as it allows me to use reinforcement learning to help develop the behavior.</p>
+                    <p id="default-description" class="description"><span>Projects</span><br/>For my third year project I have several ideas, all of which I'll be considering over the next year. I want to pick a project that best showcases my skills I've learnt.</p>
+                    <p id="first-description" class="description rotated"><span>Generating Meat For 3D Printing</span><br/>A new invention which has recently come to light is 3D printed meat, here's a <a href="https://www.youtube.com/watch?v=MFgWgDHMQEQ">video</a> of it in action. They use a handful of Steak models with all of the fats and meat meticulously placed to recreate the real thing. The problem is this doesn't allow for the steaks to appear unique as they all look very similar, my project would be to write some software which could generate realistic looking meat while still maintaining a high standard.</p>
+                    <p id="second-description" class="description rotated"><span>Photo app for travelers</span><br/>When traveling around the globe, many travelers take photos of the places they visit and the sights they see. My second project idea is to create an app which will use machine learning and other methods to rate the best photos of each monument based on current trends surrounding the monument taken from other social networks such as instagram and facebook. Each use would get an overall score for their photos and the incentive would be to reach the top of the global and national leaderboards.</p>
+                    <p id="third-description" class="description rotated"><span>Investigating family dynamics using Machine Learning</span><br/>Using machine learning we can simulate all sorts of different behaviors much like they'd be formed in the real world. I want to be able to simulate family dynamics in the traditional sense, as would be seen with animals in the wild. I'd hopefully simulate feeding, protection and teaching in a simplistic manner. The MLAgents in Unity would be a good platform to use as it allows me to use reinforcement learning to help develop the behavior.</p>
                 </div>
             </div>
         </div>
@@ -158,25 +158,25 @@
         <div class="popup" id="login">
             <form id="loginform" class="form">
                 <h1><i class="fas fa-user-circle"></i></h1>
-                <label id="loginerror" class="formerror"l>Username or password incorrect</label>
+                <label id="loginerror" class="form-error"l>Username or password incorrect</label>
                 <input id="loginusername" type="text" placeholder="Username" autocomplete="username">
                 <input id="loginpassword" type="password" placeholder="Password" autocomplete="current-password">
-                <button id="loginbutton" class="submitbutton" type="button">Login</button>
-                <button class="closebutton" type="button">X</button>
+                <button id="loginbutton" class="submit-button" type="button">Login</button>
+                <button class="close-button" type="button">X</button>
                 <a id="showregister">Register an account.</a>
             </form>
         </div>
         <div class="popup" id="register">
             <form id="registerform" class="form">
                 <h1><i class="fas fa-id-badge"></i></h1>
-                <label id="registererror" class="formerror"></label>
+                <label id="registererror" class="form-error"></label>
                 <input id="registerusername" type="text" placeholder="Username" autocomplete="username" required>
                 <input id="registerpassword" type="password" placeholder="Password" autocomplete="new-password" required>
                 <br/>
                 <label for="terms">Agree to terms and conditions?</label>
                 <input id="agreebox" type="checkbox" name="terms" required>
-                <button id="registerbutton" class="submitbutton" type="button">Register</button>
-                <button class="closebutton" type="button">X</button>
+                <button id="registerbutton" class="submit-button" type="button">Register</button>
+                <button class="close-button" type="button">X</button>
                 <a class="showlogin">Login to an account.</a>
             </form>
         </div>
