Fixed some bugs and changed layout of navbar

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
         <div id="page">
             <header>
                 <nav>
-                    <a href="home.html" title="Logo"><img id="logo" src="img/logo.png"/></a>
-                    <a href="home.html" title="Home"><i id="homebutton" class="fas fa-home"></i></a>
-                    <a href="cv.html" title="CV"><i id="cvbutton" class="fas fa-clipboard"></i></a>
-                    <div class="stick-right"><i id="profileicon" class="fas fa-user-circle"></i></div>
-                    <a title="Login" class="showlogin hang-right"><i id="loginmenubutton" class="fas fa-sign-in-alt"></i></a>
-                    <a title="Logout" class="logoutuser hang-right"><i id="logoutmenubutton" class="fas fa-sign-out-alt"></i></a>
+                    <a href="index.html" title="Logo"><img id="logo" src="img/logo.png"/></a>
+                    <a href="index.html" title="Home"><i id="home-button" class="fas fa-home"></i></a>
+                    <a href="cv.html" title="CV"><i id="cv-button" class="fas fa-clipboard"></i></a>
+                    <a href="list.php" title="Edit"><i id="edit-icon" class="fas fa-edit"></i></a>
+                    <a title="Login" class="showlogin hang-right"><i id="login-menu-button" class="fas fa-sign-in-alt"></i></a>
+                    <a title="Logout" class="logoutuser hang-right"><i id="logout-menu-button" class="fas fa-sign-out-alt"></i></a>
                 </nav>
                 <div id="arrow"/>
             </header>
