Began designing events pages

--- a/cv.html
+++ b/cv.html
@@ -15,7 +15,7 @@
         <link href="style/cv.css" rel="stylesheet" />
     </head>
     <body>
-        <div id="page">
+        <div id="wallpaper">
             <header>
                 <nav>
                     <a href="index.html" title="Logo"><img id="logo" src="img/logo.png"/></a>
