--- a/events.html
+++ b/events.html
@@ -9,9 +9,10 @@
         <title>Sebastian Heron - Home - CSC-20021</title>
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Acme&family=Indie+Flower&display=swap" rel="stylesheet" />
         <link href="style/main.css" rel="stylesheet" />
         <link href="style/login.css" rel="stylesheet" />
-        <link href="style/home.css" rel="stylesheet" />
+        <link href="style/events.css" rel="stylesheet" />
     </head>
     <body>
         <div id="wallpaper">
@@ -27,53 +28,10 @@
                 </nav>
                 <div id="arrow"></div>
             </header>
-            <div class="big-break"></div>
-            <img id="disc" title="Play DVD" src="img/dvd.png"/>
-            <div id="video-container">
-                <video width="400" id="bunny">
-                    <source src="video/Big_Buck_Bunny_extract.mp4" type="video/mp4">
-                    <source src="vidoe/Big_Buck_Bunny_extract.ogv" type="video/ogg">
-                    Your browser does not support HTML5 video.
-                </video>
-                <input id="video-slider" value="0" min="0" max="300" type="range"/>
-                <div id="volume">
-                    <i id="volumeon" class="fas fa-volume-up"></i>
-                    <i id="volume-off" class="fas fa-volume-mute"></i>
+                <h1 id="page-title">Events</h1>
+                <div class="notepad-multiple-display">
+                    <!-- Events will be added here. -->
                 </div>
-                <div id="video-cover">
-                    <p>
-                        Video courtesy of
-                        <a href="https://www.bigbuckbunny.org/" target="_blank">Big Buck Bunny</a>.
-                    </p>
-                </div>
-                <div id="controls">
-                    <button title="Restart" id="restart">
-                        <i class="fas fa-undo"></i>
-                    </button>
-                    <button title="Backward" id="rewind">
-                        <i class="fas fa-backward"></i>
-                    </button>
-                    <button id="play">
-                        <i title="Play" id="playicon" class="fas fa-play"></i>
-                        <i title="Pause" id="pause-icon" class="fas fa-pause"></i>
-                    </button>
-                    <button title="Forward" id="skip">
-                        <i class="fas fa-forward"></i>
-                    </button>
-                    <button title="Eject" id="end">
-                        <i class="fas fa-eject"></i>
-                    </button>
-                </div>
-            </div>
-            <div id="stand"></div>
-            <div id="cabinet">
-                <div class="cabinet door">
-                    <div class="cabinet door handle"></div>
-                </div>
-                <div class="cabinet door">
-                    <div class="cabinet door handle"></div>
-                </div>
-            </div>
             <footer>
                 <h1>Seb Heron Coursework for CSC-20021 - Web Technologies</h1>
             </footer>
@@ -105,7 +63,7 @@
             </div>
             <script src="script/main.js" defer></script>
             <script src="script/login.js" defer></script>
-            <script src="script/home.js" defer></script>
+            <script src="script/list.js" defer></script>
         </div>
     </body>
 </html>
