--- a/events.html
+++ b/events.html
@@ -13,6 +13,7 @@
         <link href="style/main.css" rel="stylesheet" />
         <link href="style/login.css" rel="stylesheet" />
         <link href="style/events.css" rel="stylesheet" />
+        <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     </head>
     <body>
         <div id="wallpaper">
@@ -23,7 +24,7 @@
                     <a href="cv.html" title="CV"><i id="cv-button" class="fas fa-clipboard"></i></a>
                     <a title="Login" class="show-login hang-right"><i id="login-menu-button" class="fas fa-sign-in-alt"></i></a>
                     <a title="Logout" class="logout-user hang-right"><i id="logout-menu-button" class="fas fa-sign-out-alt"></i></a>
-                    <a href="new.php" class="hang-right" id="new-button" title="Add New Event"><i id="add-icon" class="fas fa-calendar-plus"></i></i></a>
+                    <a href="submit.php" class="hang-right" id="new-button" title="Add New Event"><i id="add-icon" class="fas fa-calendar-plus"></i></i></a>
                     <a href="events.html" title="View Events"><i id="view-icon" class="fas fa-calendar-alt"></i></a>
                 </nav>
                 <div id="arrow"></div>
